# Cyber-Security-Event-Collector

./: CMakeLists.txt  README.md  cert.pem  key.pem
include/: Database.hpp  Logger.hpp  Protocol.hpp  Server.hpp  Session.hpp  Utils.hpp
src/: Agent_main.cpp  Database.cpp  Logger.cpp  Server.cpp  Session.cpp  main.cpp
